practice_ubuntu/db_connectivity_usecase/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-app
  namespace: dev-mongo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongo-app
  template:
    metadata:
      labels:
        app: mongo-app
    spec:
      containers:
      - name: mongo-app
        image: sammaha8888/nodejs-mongo-sample:1.0
        ports:
        - containerPort: 3000
