practice_ubuntu/db_connectivity_usecase/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-app-service
  namespace: dev-mongo
spec:
  type: LoadBalancer
  selector:
    app: mongo-app
  ports:
    - port: 80
      targetPort: 3000
