practice_ubuntu/db_connectivity_usecase/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-app-ingress
  namespace: dev-mongo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mongo-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-app-service
            port:
              number: 80
